--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,53 @@
-image: docker:latest
+# Use Steven Cooney's git image which simple installs git in
+# addition to the latest docker image. Ideal for these types of builds.
+image: stevencooney/docker-git:latest
+
+# Since we building docker images within a docker container we need the
+# docker in docker service.
 services:
   - docker:dind
 
 variables:
-  TEST_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH:$CI_COMMIT_REF_NAME
+  COMMIT_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH:$CI_COMMIT_SHA
   TAGGED_IMAGE: $CI_REGISTRY/$CI_PROJECT_PATH:$CI_COMMIT_TAG
 
 stages:
   - build
+  - test
   - release
 
+# Log in to Gitlab's docker registry
 before_script:
   - docker info
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
+# Build our docker image and push to Gitlab's registry
 build:
   stage: build
   script:
-    - docker build --pull -t $TEST_IMAGE .
-    - docker push $TEST_IMAGE
+    - docker build --pull -t $COMMIT_IMAGE .
+    - docker push $COMMIT_IMAGE
 
+# Verify that there are no issues when running the image
+test:
+  stage: test
+  script:
+    - docker pull $COMMIT_IMAGE
+    - docker run $COMMIT_IMAGE
+
+# If the build is on the master branch then according to our contribution
+# guides for docker images it should have a tag
 release:
   stage: release
   script:
-    - docker pull $TEST_IMAGE
-    - docker tag $TEST_IMAGE $TAGGED_IMAGE
+    - docker pull $COMMIT_IMAGE
+    - docker tag $COMMIT_IMAGE $TAGGED_IMAGE
     - docker push $TAGGED_IMAGE
   only:
     - master
 
+# If the build is on the master branch then we should update the github
+# repo too.
 github_release:
   stage: release
   script:
@@ -37,4 +56,3 @@ github_release:
     - git push github master
   only:
     - master
-    - tags
